--- a/01-intro/index.html
+++ b/01-intro/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
 	<meta charset="UTF-8">
-	<title>First Webpage</title>
+	<title>My Page</title>
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" charset="utf-8">
 </head>
 <body>
 	<section id='content'>
-	   <h1>[My Name]</h1>
-	   <h2>[My year and Major]</h2>
-	   <p>[My Goals for the semester]</p>
+	   <h1>Margaret Okonkwo</h1>
+	   <h2>Class of 2012 M.Arch</h2>
+	   <p>Learn about the Web</p>
 	</section>
 	
 </body>
