--- a/02-html-chop/index.html
+++ b/02-html-chop/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
-<title> DOGS vs CATS</title>
+	<title> DOGS vs CATS</title>
+	<img src= "dogvscat-logo.gif">
   </head>
   <body>
 		<nav id='top-menu'>
@@ -11,11 +12,16 @@
 			<li>SUBMIT</li>
 			<li>BLOG</li>
 			<li>CONTACT</li>
-			</ul>
-			</nav>
-			<header>
-			<section id='Dogs Have Better Noses'>
-			<section id='Cats Have Better Tongues'>
 		</ul>
+		</nav>
+		<header>
+			<h1>Dogs Have Better Noses</h1>
+			<img src= "dogvscat-logo.gif">
+			<section id='content'>
+				<p>Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</P>
+			<h2>Cats Have Better Tongues</h2>
+			<img src= "dogvscat-logo.gif">
+			<section id='content'>
+				<p>Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p> 
   </body>
 </html>
