added title image

--- a/02-html-chop/index.html
+++ b/02-html-chop/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<title> DOGS-vs-CATS</title>
+	<title><img src="images/dogvscat-logo.jpg"alt="logo"/></title>
 	</head>
 	<body>
 		<header>
