fixed title logo

--- a/02-html-chop/index.html
+++ b/02-html-chop/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	<img src="images/dogvscat-logo.jpg"alt="logo"/>
+	<img src="images/dogvscat-logo.gif"alt="logo"/>
 	</head>
 	<body>
 		<header>
