--- a/homework/index.html
+++ b/homework/index.html
@@ -7,11 +7,11 @@
 </head>
 <body>
 	<section id='content'>
-		<h1>[your name]'s Homework<h1>
+		<h1>Margaret Okonkwo's Homework<h1>
 		<h2>#1-Intro Example</h2>
-				<p><a href='http://mify78.github.com/01-intro/index.html'>Add your link(s) Here</a></p>
+				<p><a href='http://mify78.github.com/01-intro/index.html'></a></p>
 		<h2>#2-HTML5 Semantic Chop</h2>
-				<p><a href='http://mify78.github.com/02-html-chop/index.html'>Add your link(s) Here</p>
+				<p><a href='http://mify78.github.com/02-html-chop/index.html'></p>
 		<h2>#3-Wireframing </h2>
 				<p>Add your link(s) Here</p>
 		<h2>#4-CSS Positioning Llama</h2>
