--- a/homework/index.html
+++ b/homework/index.html
@@ -13,7 +13,7 @@
 		<h2>#2-HTML5 Semantic Chop</h2>
 				<p><a href='http://mify78.github.com/02-html-chop/index.html'>Add your link(s) Here</p>
 		<h2>#3-Wireframing </h2>
-				<p>Add your link(s) Here</p>
+				<p><a href ='http://mify78.github.com/03-wireframes'>Add your link(s) Here</p>
 		<h2>#4-CSS Positioning Llama</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#5-CSS Positioning Cats vs Dogs</h2>
