--- a/homework/index.html
+++ b/homework/index.html
@@ -13,10 +13,11 @@
 		<h2>#2-HTML5 Semantic Chop</h2>
 				<p><a href='http://mify78.github.com/02-html-chop/index.html'>Add your link(s) Here</p>
 		<h2>#3-Wireframing </h2>
-				<p> <li><a href ='http://mify78.github.com/03-wireframes/HW3-stories.pdf'> </li>Add your link(s) Here</p> 
-					<li><a href ='http://mify78.github.com/03-wireframes/HW3-Band.jpg'></li>Add your link(s) Here</p> 
-						<li><a href ='http://mify78.github.com/03-wireframes/HW3-Portfolio.jpg'> </li>Add your link(s) Here</p>
-							<li><a href ='http://mify78.github.com/03-wireframes/HW3-Restaurant.jpg'> </li>Add your link(s) Here</p>
+				<p><a href ='http://mify78.github.com/03-wireframes/HW3-stories.pdf'> Add your link(s) Here</p> 
+				<a href ='http://mify78.github.com/03-wireframes/HW3-Band.jpg'>Add your link(s) Here</p> 
+					<a href ='http://mify78.github.com/03-wireframes/HW3-Portfolio.jpg'> Add your link(s) Here</p>
+							<a href ='http://mify78.github.com/03-wireframes/HW3-Restaurant.jpg'>Add your link(s) Here</p>
+								
 		<h2>#4-CSS Positioning Llama</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#5-CSS Positioning Cats vs Dogs</h2>
