--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -2,9 +2,9 @@
 <html>
 <style>
   #images/dogvscat-logo.gif{position:static;} 
-  #top-menu {position:absolute;top:24px;left:0;padding:10px;width:24px;}
+  #top-menu {position:relative;top:24px;left:-20px;padding:10px;width:24px;}
 .menu {color:light-gray; width:12px:position:absolute;top:24px;left:0;}
-images/blackandwhitecolorpuppy.jpg{float:left;}
+#images/blackandwhitecolorpuppy.jpg{float:left;}
  .article {padding:10px;position:absolute;top:0;left:0;} 
 #images/blackandwhitecolorcat.jpg {float:right;} 
  #Dogs-Have-Better-Noses{position:absolute;top:36px;left:0;padding:10px;width:24px;}
@@ -13,6 +13,7 @@ images/blackandwhitecolorpuppy.jpg{float:left;}
 </style>
 
   	<head>
+	
 	<img src="images/dogvscat-logo.gif"alt="logo"/>
 	</head>
 	<body>
