--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -2,8 +2,8 @@
 <html>
 <style>
   #images/dogvscat-logo.gif{position:static;} 
-  #top-menu {position:relative;top:24px;left:-20px;padding:10px;width:24px;}
-.menu {color:light-gray; width:12px:position:absolute;top:24px;left:0;}
+  #top-menu {position:relative;top:20px;left:-20px;padding:10px;width:24px;}
+.ul {color:light-gray; width:12px:position:absolute;top:20px;left:-20px;}
 #images/blackandwhitecolorpuppy.jpg{float:left;}
  .article {padding:10px;position:absolute;top:0;left:0;} 
 #images/blackandwhitecolorcat.jpg {float:right;} 
