--- a/05-css-cats-vs-dogs/index.html
+++ b/05-css-cats-vs-dogs/index.html
@@ -3,7 +3,7 @@
 <style>
   #images/dogvscat-logo.gif{position:static;} 
   #top-menu {position:relative;top:20px;left:-20px;padding:10px;width:24px;}
-.ul {color:light-gray; width:12px:position:absolute;top:20px;left:-20px;}
+.ul{color:gray; width:12px:position:absolute;top:20px;left:-20px;margin:12px}
 #images/blackandwhitecolorpuppy.jpg{float:left;}
  .article {padding:10px;position:absolute;top:0;left:0;} 
 #images/blackandwhitecolorcat.jpg {float:right;} 
