--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -1,16 +1,5 @@
 <!DOCTYPE HTML>
 <html lang="en">
-<style>
-  #container {background-color:white; margin:10px; height:300px;position:relative;}
-  #images/llama1.png {float:left;} 
-  #Lorem-Aliquam-erat-volutpat {position:absolute;top:0;left:0;padding:10px;width:24px;}
-.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
-  .article {padding:10px;position:absolute;top:0;left:0;}
-#images/llama2.png {float:right;} 
- #Lorem-Ipsum {position:absolute;top:0;right:0;padding:10px;width:24px;}
-.By-Frank-Doe {color:light-gray; width:12px:position:top:0;left:0;}
-.article {padding:10px;position:absolute;top:0;left:0;}
-</style>
 <head>
 	<meta charset="UTF-8">
 	<title></title>
@@ -18,6 +7,12 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
   <link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+<style>
+  #images/llama1.png {float:left;} 
+  #section {float:left;padding:10px;width:150px;}
+  .article {float:right;padding:10px;width:150px;}
+#images/llama2.png {float:right;} 
+</style>
 </head>
 <body>
 
