--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -7,7 +7,7 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 <style>
-  #section {float:left;padding:10px;width:150px;}
+  #main-content {float:left;padding:10px;width:150px;}
   .article {float:right;padding:10px;width:150px;}
 </style>
 </head>
