added nos to articles

--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -7,14 +7,16 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 <style>
-  #main-content {float:left;padding:10px;width:150px;}
-  .article {float:right;padding:10px;width:150px;}
+  #arcticle-1 {float:right;padding:10px;width:150px;}
+#images/llama1.png {float:left;}
+  #article-2 {float:right;padding:10px;width:150px;}
+#images/llama2.png {float:right;} 
 </style>
 </head>
 <body>
 
 <section id='main-content'>
-  <article>
+  <article id ='article-1'>
     <img src='images/llama1.png'/>
     <h1>Lorem Aliquam erat volutpat</h1>
     <h2>By Frank Doe</h2>
@@ -32,7 +34,7 @@
       aliquet.</p>
   </article>
 
-  <article>
+  <article id='article-2'>
     <img src='images/llama2.png'/>
     <h1>Lorem Ipsum</h1>
     <h2>By Frank Doe</h2>
