--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -7,10 +7,10 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 <style>
-  #arcticle-1 {float:right;padding:10px;width:150px;}
-#images/llama1.png {float:left;}
-  #article-2 {float:right;padding:10px;width:150px;}
-#images/llama2.png {float:right;} 
+  #arcticle-1 {float:left;padding:10px;width:250px;margin:10px}
+#images/llama1.png {position:absolute;top:0;left:0;}
+  #article-2 {float:right;padding:10px;width:250px;}
+#images/llama2.png {position:absolute;top:0;right:0;margin:10px} 
 </style>
 </head>
 <body>
