--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -10,7 +10,7 @@
 #body{position:relative;height:300px;width:300px;background-color:white}
 #images/llama1.png {float:left;padding:10px;width:40px;height:40px;} 
 #arcticle-1{position:absolute;top:0;left:40px;height:150px;}
-#images/llama2.png {float:right;padding:10px;width:40px;height:40px;} 
+#images/llama2.png {position:absolute;top:0;right:40px;height:150px;} 
 #article-2 {position:absolute;top:0;right:40px;height:150px;}
 
 </style>
