--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -8,10 +8,10 @@
   <![endif]-->
 <style>
 #main-content{position:relative;height:300px;width:300px;background-color:white}
-#images/llama1.png{position:absolute;top:0;left:0;height:150px;}
+#images/llama1.png{position:absolute;top:0;left:0;height:40px;width:40px}
 #arcticle-1{position:absolute;top:0;left:40px;height:150px;}
-#images/llama2.png {position:absolute;top:0;right:40px;height:150px;} 
-#article-2 {position:absolute;top:-40px;right:80px;height:150px;}
+#images/llama2.png {position:absolute;top:0;right:40px;height:40px;width:40px} 
+#article-2 {position:absolute;top:150px;right:80px;height:150px;}
 
 </style>
 </head>
