--- a/2-22-12/04-css-llama/index.html
+++ b/2-22-12/04-css-llama/index.html
@@ -7,7 +7,7 @@
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 <style>
-#main-content{position:relative;height:300px;width:300px;background-color:white}
+#main-content{position:relative;height:300px;width:300px;background-color:white;}
 #images/llama1.png{position:absolute;top:0;left:0;height:40px;width:40px;}
 #arcticle-1{position:absolute;top:0;left:40px;height:150px;}
 #images/llama2.png {position:absolute;top:0;right:80px;height:40px;width:40px;} 
