--- a/06-css-cats-vs-dogs/index.html
+++ b/06-css-cats-vs-dogs/index.html
@@ -8,7 +8,7 @@
  .article {padding:10px;position:absolute;top:0;left:0;} 
 #images/blackandwhitecolorcat.jpg {float:right;} 
  #Dogs-Have-Better-Noses{position:absolute;top:36px;left:0;padding:10px;width:24px;}
-#Cats-Have-Better-Tongues{position:absolute;top:36;right:0;padding:10px;width:24px;}
+#Cats-Have-Better-Tongues{position:absolute;top:36px;right:0;padding:10px;width:24px;}
 .article {padding:10px;position:absolute;top:0;left:0;}
 </style>
 
