--- a/homework/index.html
+++ b/homework/index.html
@@ -19,7 +19,7 @@
 							<a href ='http://mify78.github.com/03-wireframes/HW3-Restaurant.jpg'>Add your link(s) Here</p>
 								
 		<h2>#4-CSS Positioning Llama</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href='http://mify78.github.com/04-css-llama/index.html'> Add your link(s) Here</p>
 		<h2>#5-CSS Positioning Cats vs Dogs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#6-CSS Layout Cats vs Dogs</h2>
