--- a/06-css-cats-vs-dogs/index.html
+++ b/06-css-cats-vs-dogs/index.html
@@ -1,21 +1,16 @@
 <!DOCTYPE html>
 <html>
-<style>
-  #images/dogvscat-logo.gif{position:static;} 
-  #top-menu {position:relative;top:20px;left:-20px;padding:10px;width:24px;}
-.ul{color:gray; width:12px:position:absolute;top:20px;left:-20px;margin:12px}
-#images/blackandwhitecolorpuppy.jpg{float:left;}
- .article {padding:10px;position:absolute;top:0;left:0;} 
-#images/blackandwhitecolorcat.jpg {float:right;} 
- #Dogs-Have-Better-Noses{position:absolute;top:36px;left:0;padding:10px;width:24px;}
-#Cats-Have-Better-Tongues{position:absolute;top:36px;right:0;padding:10px;width:24px;}
-.article {padding:10px;position:absolute;top:0;left:0;}
-</style>
-
   	<head>
+  		<meta charset="UTF-8">
+	<title></title>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 	
 	<img src="images/dogvscat-logo.gif"alt="logo"/>
 	</head>
+	
 	<body>
 		<header>
 		<nav id='top-menu'>
@@ -28,16 +23,26 @@
 			</ul>
 			</nav>
 			</header>
-			<section id='content'>
-				<article class='blog-post'>
-					<h1> Dogs Have Better Noses </h1>
+			<section id='main-content'>
+				<article>
 					<img src="images/blackandwhitecolorpuppy.jpg"alt="logo"/>
-					<p1> 
-					Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. The wet nose is essential for determining the direction of the air current containing the smell. Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture by air currents.</p1>
-					<h1> Cats Have Better Tongues </h1>
+					<h1> Dogs Have Better Noses </h1>
+					<p> 
+					Dogs can discriminate odors at concentrations nearly 100 million times lower 
+					than humans can. The wet nose is essential for determining the direction of the
+					air current containing the smell. Cold receptors in the skin are sensitive to 
+					the cooling of the skin by evaporation of the moisture by air currents.</p>
+					</article>
+					
+					<article>
 					<img src="images/blackandwhitecolorcat.jpg"alt="logo"/>
-					<p2>
-					Cats are known for their cleanliness, spending many hours licking their coats. The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their fur, with the rows of papillae acting like a hairbrush.</p2>
+					<h1> Cats Have Better Tongues </h1>
+					<p>
+					Cats are known for their cleanliness, spending many hours licking their coats.
+					The cat's tongue has backwards-facing spines about 500 micrometers long, which 
+					are called papillae. These are quite rigid, as they contain keratin. These 
+					spines allow cats to groom themselves by licking their fur, with the rows of 
+					papillae acting like a hairbrush.</p>
 				</article>
 			</section>
 				<footer id='site-footer'>
