--- a/homework/index.html
+++ b/homework/index.html
@@ -25,7 +25,7 @@
 		<h2>#6-CSS Layout Cats vs Dogs</h2>
 		    	<p>Add your link(s) Here</p>
 		<h2>#7-CSS Positioning & Layout Robots</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href ='http://mify78.github.com/08-final-designs/MO-final-project-frame-work.jpg'>Add your link(s) Here</p> <p><a href ='http://mify78.github.com/08-final-designs/MO-Web-Design1-Final-project-wireframe.jpg'>Add your link(s) Here</p>
 		<h2>#8-Final Project Designs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#9-Responsive Homework -Cats vs Dogs</h2>
