--- a/06-css-cats-vs-dogs/index.html
+++ b/06-css-cats-vs-dogs/index.html
@@ -14,12 +14,12 @@
 		<img src="images/dogvscat-logo.gif"alt="logo"/>
 		
 		<nav id='top-menu'>
-		<ul class='menu'>
-			<li>PHOTOS</li>
-			<li>ABOUT</li>
-			<li>SUBMIT</li>
-			<li>BLOG</li>
-			<li>CONTACT</li>
+		<ul>
+			<li> <a href="#">PHOTOS</a></li>
+			<li><a href="#">ABOUT</a></li>
+			<li><a href="#">SUBMIT</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">CONTACT</a></li>
 			</ul>
 			</nav>
 			</header>
