--- a/06-css-cats-vs-dogs/index.html
+++ b/06-css-cats-vs-dogs/index.html
@@ -11,7 +11,7 @@
 	
 	<body>
 		<header>
-		<img src="images/dogvscat-logo.gif"alt="logo"/>
+		<img src="images/dogvscat-logo.gif" class="logo"alt="logo"/>
 		
 		<nav id='top-menu'>
 		<ul>
@@ -24,9 +24,9 @@
 			</nav>
 			</header>
 			<section id='main-content'>
-				<article>
+				<article class='dog'>
 
-					<img src="images/blackandwhitecolorpuppy.jpg"alt="logo"/>
+					<img src="images/blackandwhitecolorpuppy.jpg" class="dog"alt="logo"/>
 					<h1> Dogs Have Better Noses </h1>
 					<p> 
 					Dogs can discriminate odors at concentrations nearly 100 million times lower 
@@ -35,8 +35,8 @@
 					the cooling of the skin by evaporation of the moisture by air currents.</p>
 					</article>
 					
-					<article>
-					<img src="images/blackandwhitecolorcat.jpg"alt="logo"/>
+					<article class='cat'>
+					<img src="images/blackandwhitecolorcat.jpg"class="cat"alt="logo"/>
 						<h1> Cats Have Better Tongues </h1>
 					<p>
 					Cats are known for their cleanliness, spending many hours licking their coats.
