--- a/homework/index.html
+++ b/homework/index.html
@@ -23,7 +23,7 @@
 		<h2>#5-CSS Positioning Cats vs Dogs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#6-CSS Layout Cats vs Dogs</h2>
-		    	<p>Add your link(s) Here</p>
+		    	<p><a href ='http://mify78.github.com/06-css-cats-vs-dogs/index.html'>Add your link(s) Here</p>
 		<h2>#7-CSS Positioning & Layout Robots</h2>
 			
 		<h2>#8-Final Project Designs</h2>
