--- a/09-responsive-cats-vs-dogs/index.html
+++ b/09-responsive-cats-vs-dogs/index.html
@@ -1,9 +1,55 @@
 <!DOCTYPE html>
 <html>
-  <head>
+  	<head>
+  		<meta charset="UTF-8">
+	<title></title>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
+	</head>
+	
+	<body>
+		<header>
+		<img src="images/dogvscat-logo.gif" class="logo"alt="logo"/>
+		
+		<nav id='top-menu'>
+		<ul>
+			<li> <a href="#">PHOTOS</a></li>
+			<li><a href="#">ABOUT</a></li>
+			<li><a href="#">SUBMIT</a></li>
+			<li><a href="#">BLOG</a></li>
+			<li><a href="#">CONTACT</a></li>
+			</ul>
+			</nav>
+			</header>
+			<section id='main-content'>
+				<article class='dog'>
 
-  </head>
-  <body>
-
-  </body>
-</html>
+					<img src="images/blackandwhitecolorpuppy.jpg" class="dog"alt="logo"/>
+					<h1> Dogs Have Better Noses </h1>
+					<p> 
+					Dogs can discriminate odors at concentrations nearly 100 million times lower 
+					than humans can. The wet nose is essential for determining the direction of the
+					air current containing the smell. Cold receptors in the skin are sensitive to 
+					the cooling of the skin by evaporation of the moisture by air currents.</p>
+					</article>
+					
+					<article class='cat'>
+					<img src="images/blackandwhitecolorcat.jpg"class="cat"alt="logo"/>
+						<h1> Cats Have Better Tongues </h1>
+					<p>
+					Cats are known for their cleanliness, spending many hours licking their coats.
+					The cat's tongue has backwards-facing spines about 500 micrometers long, which 
+					are called papillae. These are quite rigid, as they contain keratin. These 
+					spines allow cats to groom themselves by licking their fur, with the rows of 
+					papillae acting like a hairbrush.</p>
+				</article>
+			</section>
+			
+				<footer id='site-footer'>
+				Images and copy from Google
+				Copyright 2011 Martha Rettig
+				</footer>
+		</body>
+	</html>
