--- a/homework/index.html
+++ b/homework/index.html
@@ -31,7 +31,7 @@
 		<h2>#9-Responsive Homework -Cats vs Dogs</h2>
 				<p>Add your link(s) Here</p>
 		<h2>#10-Type Homework - Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href ='http://mify78.github.com/10-type-cats-vs-dogs%20copy/index.html'>Add your link(s) Here</p>
 		<h2>#11-Final Project</h2>
 				<p>Add your link(s) Here</p>				
 	</section>
