--- a/09-responsive-cats-vs-dogs/index.html
+++ b/09-responsive-cats-vs-dogs/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html>
-  	<head>
-  		<meta charset="UTF-8">
+	<head>
+	<meta charset="UTF-8">
 	<title></title>
   <!--[if lt IE 9]>
   <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
   <![endif]-->
 	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
 	</head>
-	
 	<body>
-		<header>
+		<header id='site-header'>
 		<img src="images/dogvscat-logo.gif" class="logo"alt="logo"/>
 		
 		<nav id='top-menu'>
@@ -23,33 +22,37 @@
 			</ul>
 			</nav>
 			</header>
-			<section id='main-content'>
-				<article class='dog'>
-
-					<img src="images/blackandwhitecolorpuppy.jpg" class="dog"alt="logo"/>
+			
+			<section id='content'>
+				<article id='dog'>
+					<img src="images/blackandwhitecolorpuppy.jpg "class="dog""alt="logo"/>
 					<h1> Dogs Have Better Noses </h1>
 					<p> 
-					Dogs can discriminate odors at concentrations nearly 100 million times lower 
-					than humans can. The wet nose is essential for determining the direction of the
-					air current containing the smell. Cold receptors in the skin are sensitive to 
-					the cooling of the skin by evaporation of the moisture by air currents.</p>
+					Dogs can discriminate odors at concentrations nearly 100 million times lower than humans can. 
+					The wet nose is essential for determining the direction of the air current containing the smell. 
+					Cold receptors in the skin are sensitive to the cooling of the skin by evaporation of the moisture 
+					by air currents.</p>
 					</article>
 					
-					<article class='cat'>
-					<img src="images/blackandwhitecolorcat.jpg"class="cat"alt="logo"/>
-						<h1> Cats Have Better Tongues </h1>
+					<article id='cat'>
+					<img src="images/blackandwhitecolorcat.jpg "class="cat""alt="logo"/>
+					<h1> Cats Have Better Tongues </h1>
 					<p>
-					Cats are known for their cleanliness, spending many hours licking their coats.
-					The cat's tongue has backwards-facing spines about 500 micrometers long, which 
-					are called papillae. These are quite rigid, as they contain keratin. These 
-					spines allow cats to groom themselves by licking their fur, with the rows of 
-					papillae acting like a hairbrush.</p>
+					Cats are known for their cleanliness, spending many hours licking their coats. 
+					The cat's tongue has backwards-facing spines about 500 micrometers long, which are called papillae. 
+					These are quite rigid, as they contain keratin. These spines allow cats to groom themselves by licking their 
+					fur, with the rows of papillae acting like a hairbrush.</p>
 				</article>
 			</section>
 			
 				<footer id='site-footer'>
-				Images and copy from Google
-				Copyright 2011 Martha Rettig
+    				<section id='footer-credit'>
+					Images and copy from Google
+					</section>
+					
+					<section id='footer-copyright'>
+					Copyright 2011 Martha Rettig
+					</section>
 				</footer>
 		</body>
 	</html>
