--- a/homework/index.html
+++ b/homework/index.html
@@ -29,7 +29,7 @@
 		<h2>#8-Final Project Designs</h2>
 				<p><a href ='http://mify78.github.com/08-final-designs/MO-Final-project-frame-work.jpg'>Add your link(s) Here</p> <p><a href ='http://mify78.github.com/08-final-designs/MO-Web-Design1-Final-project-wireframe.jpg'>Add your link(s) Here</p>Add your link(s) Here</p>
 		<h2>#9-Responsive Homework -Cats vs Dogs</h2>
-				<p>Add your link(s) Here</p>
+				<p><a href ='http://mify78.github.com/09-responsive-cats-vs-dogs/index.html'>Add your link(s) Here</p>
 		<h2>#10-Type Homework - Cats vs Dogs</h2>
 				<p><a href ='http://mify78.github.com/10-type-cats-vs-dogs%20copy/index.html'>Add your link(s) Here</p>
 		<h2>#11-Final Project</h2>
