added final hw file to folder

--- a/11-final/index.html
+++ b/11-final/index.html
@@ -1,9 +1,183 @@
 <!DOCTYPE html>
 <html>
   <head>
-
+<meta charset="UTF-8">
+	<title></title>
+  <!--[if lt IE 9]>
+  <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
+  <![endif]-->
+	<link rel="stylesheet" href="style.css" type="text/css" media="screen" />
   </head>
   <body>
+  <header>
+  <header id='site-header'>
+   <img src="images/outline-map-of-nigeria.jpg" class="site-logo"alt="logo"/>
+ <h1> HOME AND FAMILY: 
+ Preserving the Residential Fabric of The Nigerian Igbo Village </h1>
+		
+		<nav id='top-menu'>
+		<ul>
+			<li> <a href="#">HOME</a></li>
+			<li><a href="#">ABOUT NIGERIA</a></li>
+			<li><a href="#">THESIS TOPIC</a></li>
+			<li><a href="#">ABOUT ME</a></li>
+			<li><a href="#">CONTACT</a></li>
+			</ul>
+			</nav>
+  </header>
 
+  <section id= 'content'> 
+  
+  <img src="images/africamap.jpg" class="africa-map"alt="logo"/>
+
+<article class='about-nigeria'>
+<p>Nigeria is located in the West of the African continent, just above the equator.  It is abounded
+on the north by Niger Republic, the east by Cameroon, the west by Benin, and the south by the 
+Atlantic Ocean.  Although many linguistic groups exist in Nigeria, there are three major tribes 
+from which others can trace their origin - Igbo, Yoruba and Hausa.   Each of these tribes have 
+their own distinct language and are culturally different. </p>
+
+<img src="images/Nigeria_country.png" class="nigeria-map"alt="logo"/>
+
+<p>The Nigerian climate is warm and humid, and consists of two major seasons year round – the rainy
+and the dry  seasons.   Rainy season lasts  approximately from  February to October (typically 
+in the Southeastern and coastal parts of the country).  The  dry  season runs  from  November  
+to  about  January,  and is a predominate season in the Northern regions. </p>
+</article>
+  
+  	<article class='big-house-issue'>
+  		<p> Successful architecture is one that highlights harmony between the content 
+  		(the building) and the context (the natural landscape).  Here in Igboland, 
+  		its natural landscape is beautiful and begs that any additions only enhance 
+ 		 and not take away from this fact.  While understanding that big houses 
+ 		 accomodate more people and possessions, the truth is building “big” is 
+ 		 not without negative consequences.  These include the obvious increase in 
+ 		 construction costs, time, labor, and the level of difficulty.</p> 
+
+		<p>The “mc-mansion” houses springing up in today’s Nigerian village 
+		(specifically Igbo villages) sometimes ignores this.  In order to build “big” 
+		huge portions of the natural vegetation are razed and the yard areas paved over.  
+		Some compounds do have plantings but they are dwarfed by the scale of the house, 
+		in the end it becomes a fight between content (the building) and the context 
+		(the natural landscape). </p>
+	</article>
+
+	<article class='end-result'>
+	<p>The end goal of my Thesis research and study is to obtain a residential 
+	architectural vernacular within the Igbo village that:
+
+	1. Speaks to this idea of “CONTENT + CONTEXT”
+			
+	2. Maintains a sense of “PLACE” unchanged even when the “TIME” does. </p>
+	</article>
+	
+	<article class='design-principles'>
+	<h2> Design Principles </h2>
+	<p>To this effect, a set of DESIGN PRINCIPLES intended to guide the future village 
+	home builder is proposed.  The following nine points further expand on and explain
+	the above mentioned goals:</p>
+	</article>
+
+		<nav id='design-principles'>
+		<ul>
+			<li> <a href="#">Style and Form</a></li>
+			<li> <a href="#">Scale and Siting</a></li>
+			<li> <a href="#">Space Composition</a></li>
+			<li> <a href="#">Space and Function</a></li>
+			<li> <a href="#">Building Materials</a></li>
+			<li> <a href="#">Material Composition</a></li>
+			<li> <a href="#">Vegetation</a></li>
+			<li> <a href="#">Energy Conservation</a></li>
+			<li> <a href="#">Climate Considerations</a></li>
+			</ul>
+			</nav>
+
+<article class='principle-notes'>
+
+<p>The architectural style of the house should be respectful and representative of its 
+surrounding, i.e. 20 ft high Romanesque columns do not belong on a Nigerian house, 
+especially within the village setting.</p>
+	
+<p>Multi-storied houses do not necessarily have to equal “humungus”.  The scale of the 
+house should be proportional to the size of the site, and because it is residential, 
+it should also be relative to human scale.</p>
+	
+<p>The exterior shape/form of the house generally affects its interior layout.Therefore, 
+the exterior should balance out the interior in terms of space usage.  Most of these 
+monumental houses sometimes have leftover space at the interior (especially at the first 
+floor) with no intentional programing.  The most common example of this is houses that end 
+up with oversized living rooms due to a huge footprint; it makes the space difficult to 
+furnish and unnecessarily monumental in width and height. </p>
+	
+<p>Some spaces within the house within the house are most useful when they are flexible and
+made adaptable to multiple functions .  An “open plan” arrangement at the first floor allows
+for this (especially areas designated as public domain) will benefit from this.  
+Two spaces can be separate or shared through the use of movable partitions; e.g. 
+Living and Family Room.</p>
+	
+<p>Materials for building in these parts of Nigeria are readily available.  Use building 
+materials that: 1. Embody the culture and, 2. Represent appropriate technological 
+advancements of the “time and place”; i.e. mud bricks (if one-storey high),  clay tiles, 
+concrete, CMU, bamboo, timber and palm fronds.  Use some metals; floor mats; and fabric 
+that are representative of the tribe.  It is important to preserve the essence of the 
+village architecture, regardless of technological advancements; the significant elements 
+of the village and village life can remain intact.</p>
+	</article>
+	
+<p>Maintain historic design and building practices by using elements that enhances the 
+uniqueness of the village.  A healthy balance between “old” and “new” design elements and 
+principles can be created and high-lighted in the houses being built in today’s village.  
+Combinations such as loam walls (wattle and daub construction), thatched roof, clay tile 
+roof and walls, wood carved doors, exterior walls with decorative etchings, vegetation and 
+the use of low mud wall surrounds to divide compounds will produce a house that showcases 
+an essence of the village. </p>
+	
+<p>The natural vegetation existing throughout the Southern regions offers not just building
+resources, but beauty and sustenance; they should be used in the overall compound layout.  
+Plants and trees are simple but great elements that can enhance one’s house .  Vegetation 
+such as Coconut trees, Orange trees, Hibiscus plants, Palm trees, Mahogany and Mango trees,
+are some of the most common indigenous vegetation found in this tropical </p>
+	</article>
+	
+<p>Use building materials and energy conserving practices to create a cool and healthy 
+living environment.  This is not a foreign concept in the Nigerian architecture as research
+shows that this was the typical practice.  
+
+Although the culture celebrates the extended family and providing separate living quarters 
+for different family sects, it is prudent to build one main house for living in lieu of the
+former “big house + multiple smaller ones” within one compound.  This will keep costs and 
+material usage to a minimum.
+
+Natural ventilation practices should be implemented in order to eliminate the dependency on
+air conditioning.  These include plantings close to the house; the use of building materials
+such as masonry at the walls and roofs; and the use of casement windows to allow direct 
+airflow/exchange.  
+
+In lieu of air conditioning units, ceiling fans are great for air circulation and cooling 
+(especially when the space it is cooling is of a small volume, e.g. any areas of 250 square 
+feet and below).  As Nigeria is a tropical climate, energy from the sun can be easily harnessed
+through photovoltaic 
+technology.</p>
+	
+<p>The Nigerian village, as well as most countries considered as third-world  could be seen as 
+places where sustainable and “green” practices are implemented.  
+
+Houses were constructed with thatched roofs made from palm fronds and mud bricks.  These 
+supported natural ventilation and air flow, and kept spaces within the house cool during harsh 
+heat and humidity.  Covered porches and verandahs were built and used for outdoor seating and 
+gathering, while acting as a buffer between the house and the climate.  Also the use of large 
+roof overhangs protected the building itself from some damge from rainfall and UV rays from the 
+sun.</p>
+	</article>
+	
+<img src="images/elevation.jpg" class="dwg-2"alt="logo"/>
+
+<img src="images/exterior.jpg" class="dwg-3"alt="logo"/>
+
+<img src="images/interior.jpg" class="dwg-4"alt="logo"/>
+
+<img src="images/site.jpg" class="dwg-5"alt="logo"/>
+</section>
   </body>
+
 </html>
