--- a/11-final/index.html
+++ b/11-final/index.html
@@ -178,6 +178,22 @@ sun.</p>
 
 <img src="images/site.jpg" class="dwg-5"alt="logo"/>
 </section>
+
+<footer id='site-footer'>
+    <section id='footer-copyright'>
+      <h3>Margaret Okonkwo copyright 2012</h3>
+    </section>
+
+    <section id='footer-follow'>
+      <h3>Follow Us</h3>
+
+      <ul>
+        <li><a href='#'><img src='images/facebook.png'/></a></li>
+        <li><a href='#'><img src='images/rss.png'/></a></li>
+        <li><a href='#'><img src='images/twitter.png'/></a></li>
+      </ul>
+    </section>
+  </footer>
   </body>
 
 </html>
